# mmsegmentation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
configs/dsdl/: README.md
docs/en/migration/: interface.md
mmseg/: version.py
mmseg/apis/: mmseg_inferencer.py
mmseg/models/backbones/: unet.py  vit.py
mmseg/models/decode_heads/: san_head.py
mmseg/visualization/: local_visualizer.py
projects/: faq.md
projects/pp_mobileseg/backbones/: strideformer.py
projects/sam_inference_demo/sam/modeling/: mask_decoder.py
requirements/: runtime.txt
tests/test_evaluation/test_metrics/: test_citys_metric.py  test_depth_metric.py  test_iou_metric.py
tests/test_models/test_backbones/: test_pidnet.py
tools/deployment/: pytorch2torchscript.py
